# eva_arch

./: .condarc  .editorconfig  .env.sh  .envrc  .eva.gitignore  .gitconfig  .luacheckrc  .pathrc  .pre-commit-config.yaml  .profile  .profile.sh  .rc.zsh  .tmux.conf  .vimrc  .wakatime.cfg  .xprofile  .xsession  .xsessionrc  .zlogin  .zprofile  .zsh.bashrc  .zshenv  README.md  Vagrantfile  pyproject.toml
.bin/: lock  wawz
.config/: autostart.sh  picom.conf  postrc.zsh  rc.post.zsh  rc.zsh  ssh.conf
.config/alacritty/: .gitignore  alacritty.toml  dank-theme.toml
.config/awesome/: .gitignore  Makefile  README.md  autostart.lua  dev.sh  logging.lua  rc.lua  rc.monolith.lua  todolist.txt
.config/awesome/config/: apps.lua  autostart.lua  display.lua  errors.lua  keys.lua  layouts.lua  menu.lua  monitors.lua  rules.lua  signals.lua  theme.lua  ui.lua  widgets.lua
.config/awesome/themes/: README.md
.config/awesome/themes/blackburn/: theme.lua
.config/awesome/themes/copland/: theme.lua
.config/awesome/themes/dremora/: theme.lua
.config/awesome/themes/holo/: theme.lua
.config/awesome/widgets/: README.md
.config/etc/keyd/: default.conf
.config/hypr/: .gitignore  hyprland.conf  workspace.conf
.config/hypr/dms/: binds.conf  colors.conf  cursor.conf  outputs.conf
.config/kanata/: colemak-dh.kbd  gallium.json  gallium.kbd
.config/kanata/archived/: colemak-dh.kbd  gallium.kbd  iac.kbd  jtroo.kbd
.config/kitty/: .gitignore  dank-tabs.conf  dank-theme.conf  kitty.conf
.config/neofetch/: config.conf
.config/niri/: .gitignore  config.kdl
.config/niri/dms/: binds.kdl  colors.kdl  cursor.kdl  outputs.kdl  windowrules.kdl
.config/personal/: aris.xml  cv.yml  environment.yml  environment_base.yml  hf.yml  signature.html  torch.yml
.config/personal/conda_env/: demo.yml  demo118.yml  deprecated.yml  environment.yml  environment_base.yml  environment_eva.yml  environment_hpc.yml  environment_jax.yml  environment_mac.yml  environment_win.yml
.config/qtile/: README.md  config.py  todolist.txt
.config/scripts/profile.d/: modules.sh
.config/terminator/: config
.config/zsh_custom/: .gitignore  alias.zsh  byted.zsh  desktop.zsh  docker.zsh  env.zsh  g2.zsh  gypsum.zsh  nersc.zsh  openclaw.zsh  server.zsh  uml.zsh  wsl.zsh
.config/zsh_custom/deprecated/: docker_mysql.zsh  g2.zsh  gypsum.zsh  metamap.zsh  nersc.zsh  wsl.zsh
.config/zsh_custom/tests/: alias_confilict.zsh
.config/zsh_custom/themes/: astro.zsh-theme
.github/workflows/: pre-commit.yml
(+21 files in other folders)
